force-app/main/default/objects/LLC_BI__Opportunity_History__c/LLC_BI__Opportunity_History__c.object-meta.xml
<CustomObject>
    <description>The Opportunity History object tracks details of opportunities in nCino</description>
    <label>Opportunity History</label>
    <nameField>
        <displayFormat>OH-{00000000}</displayFormat>
        <label>Opportunity Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>