force-app/main/default/objects/LLC_BI__Opportunity_History__c/fields/LLC_BI__Amount__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Amount__c</fullName>
    <description>This field is automatically populated with a trigger. This field is used to specify the amount of the opportunity.</description>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>