force-app/main/default/objects/LLC_BI__Opportunity_History__c/fields/LLC_BI__Change_Time__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Change_Time__c</fullName>
    <description>This field is automatically populated with a trigger. This field is used to specify the Date/Time an opportunity record is created due to a change.</description>
    <label>Start Time</label>
    <type>DateTime</type>
</CustomField>