force-app/main/default/objects/LLC_BI__Opportunity_History__c/fields/LLC_BI__Deposit__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Deposit__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This field is automatically populated with a trigger. This is a look-up field used to specify the deposit record the opportunity history is associated with.</description>
    <label>Deposit</label>
    <referenceTo>LLC_BI__Deposit__c</referenceTo>
    <relationshipLabel>Opportunity History</relationshipLabel>
    <relationshipName>Opportunity_History</relationshipName>
    <type>Lookup</type>
</CustomField>