force-app/main/default/objects/LLC_BI__Opportunity_History__c/fields/LLC_BI__Is_Booked__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Booked__c</fullName>
    <description>This field is automatically populated with a formula. This field is automatically checked when the opportunity is in a &quot;booked&quot; status.</description>
    <formula>IF(LLC_BI__Loan__c != null,CONTAINS(LLC_BI__Loan__r.LLC_BI__Product_Reference__r.LLC_BI__Product_Type__r.LLC_BI__Booked__r.LLC_BI__All_Values__c, LLC_BI__Stage_And_Status__c),false)</formula>
    <label>Is Booked</label>
    <type>Checkbox</type>
</CustomField>