force-app/main/default/objects/LLC_BI__Opportunity_History__c/fields/LLC_BI__Is_Closed__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Closed__c</fullName>
    <description>This field is automatically populated via formula. It  automatically sets the value to true or false based on the stage and status of the loan. The value is set to true once a loan reaches the equivalent of a closing stage for a financial institution.</description>
    <formula>IF(LLC_BI__Loan__c != null,CONTAINS(LLC_BI__Loan__r.LLC_BI__Product_Reference__r.LLC_BI__Product_Type__r.LLC_BI__Closed__r.LLC_BI__All_Values__c, LLC_BI__Stage_And_Status__c),false)</formula>
    <label>Is Closed</label>
    <type>Checkbox</type>
</CustomField>