force-app/main/default/objects/LLC_BI__Opportunity_History__c/fields/LLC_BI__Loan__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Loan__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This field is automatically populated with a trigger. This field is a lookup field and is used to specify the loan record that the opportunity history is associated with.</description>
    <label>Loan</label>
    <referenceTo>LLC_BI__Loan__c</referenceTo>
    <relationshipLabel>Opportunity History</relationshipLabel>
    <relationshipName>Opportunity_History</relationshipName>
    <type>Lookup</type>
</CustomField>