force-app/main/default/objects/LLC_BI__Opportunity_History__c/fields/LLC_BI__OpportunityId__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__OpportunityId__c</fullName>
    <description>This field is automatically populated with a trigger. Opportunity ID is the Id of the product opportunity each stage record is associated with. There is no master-detail relationship to enable supporting an unlimited number of opportunities.</description>
    <label>Opportunity Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>