force-app/main/default/objects/LLC_BI__Opportunity_History__c/fields/LLC_BI__Previous_Stage_Duration_Minutes__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Previous_Stage_Duration_Minutes__c</fullName>
    <description>This field is automatically populated with a trigger on insert. This field holds the previous sum of the Stage Duration Minutes for its stage of a single loan.</description>
    <inlineHelpText>Set in Code - holds the previous Stage Duration Minutes for its stage of a single loan.</inlineHelpText>
    <label>Previous Stage Duration Minutes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>