force-app/main/default/objects/LLC_BI__Opportunity_History__c/fields/LLC_BI__Previous_Stage_Duration_Non_Business_Min__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Previous_Stage_Duration_Non_Business_Min__c</fullName>
    <description>This field is automatically populated with a trigger. This field holds the previous sum of the Stage Duration Minutes for its stage of a single loan (non-business hours only).</description>
    <inlineHelpText>Set in Code - holds the previous Stage Duration Minutes for its stage of a single loan (Non-business hours only).</inlineHelpText>
    <label>Prev Stage Duration Non-Business Mins</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>