force-app/main/default/objects/LLC_BI__Opportunity_History__c/fields/LLC_BI__Product_Package__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Product_Package__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This field is automatically populated. It identifies the Product Package record associated with the Opportunity History.</description>
    <label>Product Package</label>
    <referenceTo>LLC_BI__Product_Package__c</referenceTo>
    <relationshipLabel>Opportunity History</relationshipLabel>
    <relationshipName>Opportunity_History</relationshipName>
    <type>Lookup</type>
</CustomField>