force-app/main/default/objects/LLC_BI__Opportunity_History__c/fields/LLC_BI__Record_Duration_Excluded_Minutes__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Record_Duration_Excluded_Minutes__c</fullName>
    <description>This field is automatically populated via formula. It identifies the number of minutes that have been excluded from the total amount of time spent in a specificed stage due to product state config settings.</description>
    <formula>IF(ISNULL(LLC_BI__End_Time__c),null,IF(LLC_BI__Is_Excluded_From_Stage_Duration__c, LLC_BI__Stage_Duration_Minutes__c - LLC_BI__Stage_Duration_Non_Business_Minutes__c, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Duration Excluded Minutes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>