force-app/main/default/objects/LLC_BI__Opportunity_History__c/fields/LLC_BI__Stage_And_Status__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Stage_And_Status__c</fullName>
    <description>This field is automatically populated with a formula. This field is used to specify the stage and status of the opportunity.</description>
    <formula>&quot;#&quot; &amp; LLC_BI__StageName__c &amp; &quot;|&quot; &amp; LLC_BI__StatusName__c &amp; &quot;#&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stage And Status</label>
    <type>Text</type>
</CustomField>