force-app/main/default/objects/LLC_BI__Opportunity_History__c/fields/LLC_BI__Stage_Change__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Stage_Change__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field is automatically populated with a trigger. This field is checked and set if the current record indicates a stage change.</description>
    <label>Stage Change</label>
    <type>Checkbox</type>
</CustomField>