force-app/main/default/objects/LLC_BI__Opportunity_History__c/fields/LLC_BI__Stage_Duration__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Stage_Duration__c</fullName>
    <description>This field is automatically populated with a formula. This formula field specifies the stage duration in days.</description>
    <formula>IF(ISNULL(LLC_BI__End_Time__c), NOW() - LLC_BI__Change_Time__c, LLC_BI__End_Time__c - LLC_BI__Change_Time__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Duration Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>