force-app/main/default/objects/LLC_BI__Opportunity_History__c/fields/LLC_BI__Stage_Duration_Minutes__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Stage_Duration_Minutes__c</fullName>
    <description>This field is automatically populated with a formula. This field holds the Stage Duration Minutes for each Stage entry, for a single loan.</description>
    <formula>IF(ISNULL(LLC_BI__End_Time__c), null, 60 * 24 * LLC_BI__Stage_Duration__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Set in Code - Holds the Stage Duration Minutes for each Stage entry, for a single loan.</inlineHelpText>
    <label>Record Duration Minutes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>