force-app/main/default/objects/LLC_BI__Opportunity_History__c/fields/LLC_BI__Stage_Duration_Non_Business_Minutes__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Stage_Duration_Non_Business_Minutes__c</fullName>
    <description>This field is automatically populated via formula. It identifies the number of Non-Business minutes that have been excluded from the total amount of time spent in a specificed stage.</description>
    <label>Record Duration Non Business Minutes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>