force-app/main/default/objects/LLC_BI__Opportunity_History__c/fields/LLC_BI__StageName__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__StageName__c</fullName>
    <description>This field is automatically populated with a trigger. This field is a used to specify the stage of the loan at the creation of this record.</description>
    <label>Stage Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>