force-app/main/default/objects/LLC_BI__Opportunity_History__c/fields/LLC_BI__Status_Change__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Status_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is automatically populated with a trigger. This field is enabled if the current record was created due to a stage change, otherwise it is disabled.</description>
    <label>Status Change</label>
    <type>Checkbox</type>
</CustomField>