force-app/main/default/objects/LLC_BI__Opportunity_History__c/fields/LLC_BI__Sum_Stage_Duration_Days__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Sum_Stage_Duration_Days__c</fullName>
    <description>This field is automatically populated with a formula. This field holds the sum of the Stage Duration Days for each Final Stage Change, for a single loan.</description>
    <formula>IF(AND(LLC_BI__Final_Stage_Change__c, NOT(ISNULL(LLC_BI__Loan__c)), OR(LLC_BI__Loan__r.LLC_BI__Is_Booked__c, LLC_BI__Loan__r.LLC_BI__Is_Closed__c)), LLC_BI__Total_Stage_Duration_Minutes__c / 60 / 24, null)</formula>
    <inlineHelpText>Set in Code - Holds the sum of the Stage Duration Days for each Final Stage Change, for a single loan.</inlineHelpText>
    <label>Sum Stage Duration Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>