force-app/main/default/objects/LLC_BI__Opportunity_History__c/fields/LLC_BI__Sum_Stage_Duration_Excluded_Minutes__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Sum_Stage_Duration_Excluded_Minutes__c</fullName>
    <description>This field is automatically populated via formula. It identifies the total (sum) number of minutes that have been excluded from the Opportunity History.</description>
    <formula>IF(AND(LLC_BI__Final_Stage_Change__c, NOT(ISNULL(LLC_BI__Loan__c)), OR(LLC_BI__Loan__r.LLC_BI__Is_Booked__c, LLC_BI__Loan__r.LLC_BI__Is_Closed__c)), LLC_BI__Total_Stage_Duration_Excluded_Minutes__c, null)</formula>
    <label>Sum Stage Duration Excluded Minutes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>