force-app/main/default/objects/LLC_BI__Opportunity_History__c/fields/LLC_BI__Total_Stage_Duration_Excluded_Minutes__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Total_Stage_Duration_Excluded_Minutes__c</fullName>
    <description>This field is automatically populated via formula. It identifies the total (sum) number of minutes that have been excluded from the Opportunity History of a particular stage.</description>
    <formula>IF(ISNULL(LLC_BI__Previous_Stage_Duration_Excluded_Minutes__c), LLC_BI__Record_Duration_Excluded_Minutes__c , LLC_BI__Record_Duration_Excluded_Minutes__c + LLC_BI__Previous_Stage_Duration_Excluded_Minutes__c)</formula>
    <label>Total Stage Duration Excluded Minutes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>