force-app/main/default/objects/LLC_BI__Opportunity_History__c/fields/LLC_BI__Total_Stage_Duration_Minutes__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Total_Stage_Duration_Minutes__c</fullName>
    <description>This field is automatically populated with a formula. It contains the total stage duration in minutes.</description>
    <formula>IF(ISNULL(LLC_BI__Previous_Stage_Duration_Minutes__c), LLC_BI__Stage_Duration_Minutes__c, LLC_BI__Stage_Duration_Minutes__c + LLC_BI__Previous_Stage_Duration_Minutes__c )</formula>
    <label>Total Stage Duration Minutes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>