force-app/main/default/objects/LLC_BI__Opportunity_History__c/fields/Verify_Duration__c.field-meta.xml
<CustomField>
    <fullName>Verify_Duration__c</fullName>
    <formula>LLC_BI__End_Time__c - LLC_BI__Change_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Verify Duration</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>